cabal-version:      2.4
name:               FinalProject
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sirish
maintainer:         hackinghaskell@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sudoku-cli
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                      , text
                      , transformers
                      , random
                      , regex-tdfa
                      , sudoku
    hs-source-dirs:   app
    default-language: Haskell2010

library sudoku
-- transformers, random, regex-tdfa are added for cabal repl 
    build-depends:    base ^>=4.14.1.0
                      , text
                      , transformers 
                      , random         
                      , regex-tdfa   
    exposed-modules:  Sudoku.CLI
                      Sudoku.Helpers
                      Sudoku.Types
    -- other-modules:    Sudoku.Types
    hs-source-dirs:   src
    default-language: Haskell2010 